<resources>
    <string name="app_name">DigiLedger</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="number_of_notes">Number of notes</string>
    <string name="enter_the_denominations">Enter the denominations received:</string>
    <string name="calculate_button">Calculate</string>
    <string name="rs_ten">Rs 10 notes</string>
    <string name="rs_twenty">Rs 20 notes</string>
    <string name="rs_fifty">Rs 50 notes</string>
    <string name="rs_hundred">Rs 100 notes</string>
    <string name="ten_rupees">10 Rupees</string>
    <string name="twenty_rupees">20 Rupees</string>
    <string name="fifty_rupees">50 Rupees</string>
    <string name="hundred_rupees">100 Rupees</string>
    <string name="new_transaction">New Transaction</string>
    <string name="transaction_details">TRANSACTION DETAILS</string>
    <string name="customer_name">%s</string>
    <string name="final_bill">Rs. %s</string>
    <string name="cash_received">Rs. %s</string>
    <string name="change">Rs. %s</string>
    <string name="details">Details coming right up!</string>
    <string name="customer_full_name">Customer Name:</string>
    <string name="entered_bill_amount">Bill Amount:</string>
    <string name="amount_received">Amount Received:</string>
    <string name="change_to_return">Change to Return:</string>
    <string name="input_customer_name">Customer Name</string>
    <string name="about_us">About Us</string>
    <string name="amount_left">Amount Left:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_history">Transaction History</string>
    <string name="customer_id">Customer ID</string>
    <string name="name">Name</string>
    <string name="save_details">Save Details</string>
    <string name="the_codebreakers">THE CODEBREAKERS</string>
    <string name="digiledger">\"DigiLedger\"</string>
    <string name="na">-N/A-</string>

    <string name="about_us_paragraph">Inspired by the famous words of Rick Astley (you know what
        we\'re talking about), we came up with an idea to create an app that\'ll never give up on
        people.\n\n\"Digiledger\" was designed keeping in mind a good social aim - to make an app
        with an intuitive and straightforward user interface (UI) that helps people keep track of
        simple day to day transactions.\n\nOur team:\n
        1) Daksh Gehlot\n
        2) Prathmesh Badgujar\n
        3) Pakhi Gupta\n
        4) Varsha Poswalia\n\nWe see stalls and small shops everywhere. These people may not be as
        educated about keeping a ledger as we are. The app we developed, helps them to properly
        calculate and manage their transactions. This is just the first build of the app, many more
        features are yet to come.\n\nSpecial thanks to "Fanda" and GDSC Shirpur for providing us the
        opportunity to develop
    </string>
    <string name="history">History</string>

</resources>