<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context=".PreviousTransactionsFragment">

    <TextView
        android:id="@+id/record_customer_list"
        style="@style/Widget.Digiledger.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:layout_marginTop="8dp"
        android:text="@string/customer_id"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@id/record_id_list"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/record_id_list"
        style="@style/Widget.Digiledger.Header"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/record_customer_list"
        android:paddingStart="10dp"
        android:text="@string/name"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/bill_amount"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/record_customer_list"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bill_amount"
        style="@style/Widget.Digiledger.Header"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:text="@string/bill_amount"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/record_id_list"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="@dimen/margin_between_elements"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_amount" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:contentDescription="@string/new_transaction"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/teal_primary"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
