<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/transaction_details"
            style="@style/Widget.DigiLedger.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="cursive"
            android:text="@string/transaction_details"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cust_name"
            style="@style/Widget.DigiLedger.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/customer_full_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/transaction_details"
            app:layout_constraintTop_toBottomOf="@+id/transaction_details" />

        <TextView
            android:id="@+id/cust_name_edit_text"
            style="@style/Widget.DigiLedger.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/transaction_details"
            app:layout_constraintTop_toBottomOf="@+id/transaction_details"
            tools:text="Customer Name" />

        <TextView
            android:id="@+id/final_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/entered_bill_amount"
            android:textStyle="bold"
            style="@style/Widget.DigiLedger.TextView"
            app:layout_constraintStart_toStartOf="@+id/transaction_details"
            app:layout_constraintTop_toBottomOf="@+id/cust_name" />

        <TextView
            android:id="@+id/cash_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/amount_received"
            android:textStyle="bold"
            style="@style/Widget.DigiLedger.TextView"
            app:layout_constraintStart_toStartOf="@+id/transaction_details"
            app:layout_constraintTop_toBottomOf="@+id/final_bill" />

        <TextView
            android:id="@+id/final_bill_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text=""
            style="@style/Widget.DigiLedger.TextView"
            app:layout_constraintEnd_toEndOf="@+id/transaction_details"
            app:layout_constraintTop_toBottomOf="@+id/cust_name_edit_text"
            tools:text="Bill Amount" />

        <TextView
            android:id="@+id/cash_received_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text=""
            style="@style/Widget.DigiLedger.TextView"
            app:layout_constraintEnd_toEndOf="@+id/transaction_details"
            app:layout_constraintTop_toBottomOf="@+id/final_bill_edit_text"
            tools:text="Amount Received" />

        <TextView
            android:id="@+id/return_to_give"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text=""
            tools:text="Change:"
            style="@style/Widget.DigiLedger.TextView"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/transaction_details"
            app:layout_constraintTop_toBottomOf="@+id/cash_received" />

        <TextView
            android:id="@+id/return_to_give_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text=""
            style="@style/Widget.DigiLedger.TextView"
            app:layout_constraintEnd_toEndOf="@+id/transaction_details"
            app:layout_constraintTop_toBottomOf="@id/cash_received_edit_text"
            tools:text="Change to Return" />

        <Button
            android:id="@+id/details_to_history_button"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginBottom="48dp"
            android:text="@string/transaction_history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_to_db"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/save_to_db"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginBottom="124dp"
            android:text="@string/save_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transaction_details"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>